--- a/conf/uwsgi.ini
+++ b/conf/uwsgi.ini
@@ -1,5 +1,7 @@
 [uwsgi]
-
+plugins = python3
+virtualenv=/var/www/blast/env/
+pythonpath =/var/www/blast/blast/
 chdir=/var/www/blast/blast/
 socket=127.0.0.1:8001
 
@@ -14,3 +16,6 @@ harakiri=30
 buffer-size=16384
 
 vacuum=True
+
+touch-reload=/var/www/blast/uwsgi
+module=blast.wsgi:application
