Added uwsgi to supervisord.conf.

--- a/conf/supervisord.conf
+++ b/conf/supervisord.conf
@@ -8,12 +8,26 @@
 ;    variables can be expanded using this syntax: "%(ENV_HOME)s".
 ;  - Comments must have a leading space: "a=b ;comment" not "a=b;comment".
 
+[program:uwsgi]
+command = uwsgi --ini conf/uwsgi.ini
+directory = /var/www/blast/
+autostart = true
+autorestart = true
+stderr_logfile = /var/tmp/uwsgi-err.log
+stdout_logfile = /var/tmp/uwsgi-out.log
+logfile_maxbytes=50MB        ; (max main logfile bytes b4 rotation;default 50MB)
+logfile_backups=10           ; (num of main logfile rotation backups;default 10)
+stopsignal = QUIT
+
+
 [program:celery-beat]
 command = /var/www/blast/env/bin/celery beat -A blast --schedule=/var/celery-beat.db --loglevel=INFO
 directory = /var/www/blast/blast/
 numprocs=1
 stdout_logfile = /var/log/celery_beat.log
 stderr_logfile = /var/log/celery_beat.log
+logfile_maxbytes=50MB        ; (max main logfile bytes b4 rotation;default 50MB)
+logfile_backups=10           ; (num of main logfile rotation backups;default 10)
 autostart = true
 autorestart = true
 startsecs = 10
@@ -24,6 +38,8 @@ directory = /var/www/blast/blast/
 numprocs=1
 stdout_logfile = /var/log/celery_worker.log
 stderr_logfile = /var/log/celery_worker.log
+logfile_maxbytes=50MB        ; (max main logfile bytes b4 rotation;default 50MB)
+logfile_backups=10           ; (num of main logfile rotation backups;default 10)
 autostart=true
 autorestart=true
 startsecs=10
