Add redis to supervisord.

--- a/conf/supervisord.conf
+++ b/conf/supervisord.conf
@@ -8,6 +8,16 @@
 ;    variables can be expanded using this syntax: "%(ENV_HOME)s".
 ;  - Comments must have a leading space: "a=b ;comment" not "a=b;comment".
 
+[program:redis]
+command = /usr/bin/redis-server
+autostart = true
+autorestart = true
+stdout_logfile = /var/log/celery_beat.log
+stderr_logfile = /var/log/celery_beat.log
+logfile_maxbytes=50MB        ; (max main logfile bytes b4 rotation;default 50MB)
+logfile_backups=10           ; (num of main logfile rotation backups;default 10)
+
+
 [program:uwsgi]
 command = uwsgi --ini conf/uwsgi.ini
 directory = /var/www/blast/
