--- a/conf/supervisord.conf
+++ b/conf/supervisord.conf
@@ -12,8 +12,8 @@
 command = /usr/bin/redis-server
 autostart = true
 autorestart = true
-stdout_logfile = /var/log/celery_beat.log
-stderr_logfile = /var/log/celery_beat.log
+stdout_logfile = /var/log/redis.log
+stderr_logfile = /var/log/redis.log
 logfile_maxbytes=50MB        ; (max main logfile bytes b4 rotation;default 50MB)
 logfile_backups=10           ; (num of main logfile rotation backups;default 10)
 
