--- a/conf/blast_nginx.conf
+++ b/conf/blast_nginx.conf
@@ -1,9 +1,18 @@
 server {
-	listen 80;
 	client_max_body_size 256m;
-	keepalive_timeout 30s;
 	charset utf-8;
 	set $home /var/www/blast/;
+
+	listen 443 ssl;
+	keepalive_timeout 70;
+	ssl_certificate     /var/www/blast/sertificates/api.bhq.io.cer;
+    	ssl_certificate_key /var/www/blast/sertificates/api.bhq.io.key;
+	ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
+	ssl_ciphers         HIGH:!aNULL:!MD5;
+
+	gzip on;
+	gzip_min_length 1000;
+	gzip_comp_level 4;
 
 	location / {
 		include /var/www/blast/conf/uwsgi_params;
