--- a/conf/uwsgi.ini
+++ b/conf/uwsgi.ini
@@ -1,13 +1,13 @@
 [uwsgi]
-plugins = python3
+plugins=python3
 virtualenv=/var/www/blast/env/
-pythonpath =/var/www/blast/blast/
+pythonpath=/var/www/blast/blast/
 chdir=/var/www/blast/blast/
 socket=127.0.0.1:8001
-
+stats=127.0.0:9002
 master=True
-processes=2
-
+processes=8
+env=DJANGO_SETTINGS_MODULE=blast.settings_prod
 module=blast.wsgi:application
 chmod-socket=664
 
