--- a/conf/supervisord.conf
+++ b/conf/supervisord.conf
@@ -1,19 +1,9 @@
-; Sample supervisor config file.
-;
-; For more information on the config file, please see:
-; http://supervisord.org/configuration.html
-;
-; Notes:
-;  - Shell expansion ("~" or "$HOME") is not supported.  Environment
-;    variables can be expanded using this syntax: "%(ENV_HOME)s".
-;  - Comments must have a leading space: "a=b ;comment" not "a=b;comment".
-
 [program:redis]
 command = /usr/bin/redis-server
 autostart = true
 autorestart = true
-stdout_logfile = /var/log/redis.log
-stderr_logfile = /var/log/redis.log
+stdout_logfile = /var/www/blast/logs/redis.log
+stderr_logfile = /var/www/blast/logs/redis.error
 logfile_maxbytes=50MB        ; (max main logfile bytes b4 rotation;default 50MB)
 logfile_backups=10           ; (num of main logfile rotation backups;default 10)
 
@@ -23,31 +13,32 @@ command = uwsgi --ini conf/uwsgi.ini
 directory = /var/www/blast/
 autostart = true
 autorestart = true
-stderr_logfile = /var/tmp/uwsgi-err.log
-stdout_logfile = /var/tmp/uwsgi-out.log
+stderr_logfile = /var/www/blast/logs/uwsgi.log
+stdout_logfile = /var/www/blast/logs/uwsgi.error
 logfile_maxbytes=50MB        ; (max main logfile bytes b4 rotation;default 50MB)
 logfile_backups=10           ; (num of main logfile rotation backups;default 10)
-stopsignal = QUIT
+stopsignal = INT
 
 
 [program:celery-beat]
-command = /var/www/blast/env/bin/celery beat -A blast --schedule=/var/celery-beat.db --loglevel=INFO
+command = /var/www/blast/env/bin/celery beat -A blast --schedule=/var/www/blast/celery-beat.db --loglevel=INFO
 directory = /var/www/blast/blast/
 numprocs=1
-stdout_logfile = /var/log/celery_beat.log
-stderr_logfile = /var/log/celery_beat.log
+stdout_logfile = /var/www/blast/logs/celery_beat.log
+stderr_logfile = /var/www/blast/logs/celery_beat.error
 logfile_maxbytes=50MB        ; (max main logfile bytes b4 rotation;default 50MB)
 logfile_backups=10           ; (num of main logfile rotation backups;default 10)
 autostart = true
 autorestart = true
 startsecs = 10
 
+
 [program:celery-worker]
 command = /var/www/blast/env/bin/celery worker -A blast --loglevel=INFO
 directory = /var/www/blast/blast/
 numprocs=1
-stdout_logfile = /var/log/celery_worker.log
-stderr_logfile = /var/log/celery_worker.log
+stdout_logfile = /var/www/blast/logs/celery_worker.log
+stderr_logfile = /var/www/blast/logs/celery_worker.error
 logfile_maxbytes=50MB        ; (max main logfile bytes b4 rotation;default 50MB)
 logfile_backups=10           ; (num of main logfile rotation backups;default 10)
 autostart=true
@@ -66,13 +57,6 @@ killasgroup=true
 ; Set Celery priority higher than default (999)
 ; so, if rabbitmq is supervised, it will start first.
 priority=1000
-
-;[unix_http_server]
-;file=/tmp/supervisor.sock   ; (the path to the socket file)
-;chmod=0700                 ; socket file mode (default 0700)
-;chown=nobody:nogroup       ; socket file uid:gid owner
-;username=user              ; (default is no username (open server))
-;password=123               ; (default is no password (open server))
 
 ;[inet_http_server]         ; inet (TCP) server disabled by default
 ;port=127.0.0.1:9001        ; (ip_address:port specifier, *:port for all iface)
@@ -182,43 +166,10 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ;environment=A="1",B="2"       ; process environment additions
 ;serverurl=AUTO                ; override serverurl computation (childutils)
 
-; The below sample group section shows all possible group values,
-; create one or more 'real' group: sections to create "heterogeneous"
-; process groups.
-
-;[group:thegroupname]
-;programs=progname1,progname2  ; each refers to 'x' in [program:x] definitions
-;priority=999                  ; the relative start priority (default 999)
-
-; The [include] section can just contain the "files" setting.  This
-; setting can list multiple files (separated by whitespace or
-; newlines).  It can also contain wildcards.  The filenames are
-; interpreted as relative to this file.  Included files *cannot*
-; include files themselves.
-
-;[include]
-;files = relative/directory/*.ini
-; Sample supervisor config file.
-;
-; For more information on the config file, please see:
-; http://supervisord.org/configuration.html
-;
-; Notes:
-;  - Shell expansion ("~" or "$HOME") is not supported.  Environment
-;    variables can be expanded using this syntax: "%(ENV_HOME)s".
-;  - Comments must have a leading space: "a=b ;comment" not "a=b;comment".
-
-;[unix_http_server]
-;file=/tmp/supervisor.sock   ; (the path to the socket file)
-;chmod=0700                 ; socket file mode (default 0700)
-;chown=nobody:nogroup       ; socket file uid:gid owner
-;username=user              ; (default is no username (open server))
-;password=123               ; (default is no password (open server))
-
 [inet_http_server]         ; inet (TCP) server disabled by default
 port=9001        ; (ip_address:port specifier, *:port for all iface)
-;username=user              ; (default is no username (open server))
-;password=123               ; (default is no password (open server))
+username=user              ; (default is no username (open server))
+password=123               ; (default is no password (open server))
 
 [supervisord]
 logfile=/tmp/supervisord.log ; (main log file;default $CWD/supervisord.log)
@@ -252,90 +203,3 @@ serverurl=http://127.0.0.1:9001 ; use an http:// url to specify an inet socket
 ;prompt=mysupervisor         ; cmd line prompt (default "supervisor")
 ;history_file=~/.sc_history  ; use readline history if available
 
-; The below sample program section shows all possible program subsection values,
-; create one or more 'real' program: sections to be able to control them under
-; supervisor.
-
-;[program:theprogramname]
-;command=/bin/cat              ; the program (relative uses PATH, can take args)
-;process_name=%(program_name)s ; process_name expr (default %(program_name)s)
-;numprocs=1                    ; number of processes copies to start (def 1)
-;directory=/tmp                ; directory to cwd to before exec (def no cwd)
-;umask=022                     ; umask for process (default None)
-;priority=999                  ; the relative start priority (default 999)
-;autostart=true                ; start at supervisord start (default: true)
-;startsecs=1                   ; # of secs prog must stay up to be running (def. 1)
-;startretries=3                ; max # of serial start failures when starting (default 3)
-;autorestart=unexpected        ; when to restart if exited after running (def: unexpected)
-;exitcodes=0,2                 ; 'expected' exit codes used with autorestart (default 0,2)
-;stopsignal=QUIT               ; signal used to kill process (default TERM)
-;stopwaitsecs=10               ; max num secs to wait b4 SIGKILL (default 10)
-;stopasgroup=false             ; send stop signal to the UNIX process group (default false)
-;killasgroup=false             ; SIGKILL the UNIX process group (def false)
-;user=chrism                   ; setuid to this UNIX account to run the program
-;redirect_stderr=true          ; redirect proc stderr to stdout (default false)
-;stdout_logfile=/a/path        ; stdout log path, NONE for none; default AUTO
-;stdout_logfile_maxbytes=1MB   ; max # logfile bytes b4 rotation (default 50MB)
-;stdout_logfile_backups=10     ; # of stdout logfile backups (default 10)
-;stdout_capture_maxbytes=1MB   ; number of bytes in 'capturemode' (default 0)
-;stdout_events_enabled=false   ; emit events on stdout writes (default false)
-;stderr_logfile=/a/path        ; stderr log path, NONE for none; default AUTO
-;stderr_logfile_maxbytes=1MB   ; max # logfile bytes b4 rotation (default 50MB)
-;stderr_logfile_backups=10     ; # of stderr logfile backups (default 10)
-;stderr_capture_maxbytes=1MB   ; number of bytes in 'capturemode' (default 0)
-;stderr_events_enabled=false   ; emit events on stderr writes (default false)
-;environment=A="1",B="2"       ; process environment additions (def no adds)
-;serverurl=AUTO                ; override serverurl computation (childutils)
-
-; The below sample eventlistener section shows all possible
-; eventlistener subsection values, create one or more 'real'
-; eventlistener: sections to be able to handle event notifications
-; sent by supervisor.
-
-;[eventlistener:theeventlistenername]
-;command=/bin/eventlistener    ; the program (relative uses PATH, can take args)
-;process_name=%(program_name)s ; process_name expr (default %(program_name)s)
-;numprocs=1                    ; number of processes copies to start (def 1)
-;events=EVENT                  ; event notif. types to subscribe to (req'd)
-;buffer_size=10                ; event buffer queue size (default 10)
-;directory=/tmp                ; directory to cwd to before exec (def no cwd)
-;umask=022                     ; umask for process (default None)
-;priority=-1                   ; the relative start priority (default -1)
-;autostart=true                ; start at supervisord start (default: true)
-;startsecs=1                   ; # of secs prog must stay up to be running (def. 1)
-;startretries=3                ; max # of serial start failures when starting (default 3)
-;autorestart=unexpected        ; autorestart if exited after running (def: unexpected)
-;exitcodes=0,2                 ; 'expected' exit codes used with autorestart (default 0,2)
-;stopsignal=QUIT               ; signal used to kill process (default TERM)
-;stopwaitsecs=10               ; max num secs to wait b4 SIGKILL (default 10)
-;stopasgroup=false             ; send stop signal to the UNIX process group (default false)
-;killasgroup=false             ; SIGKILL the UNIX process group (def false)
-;user=chrism                   ; setuid to this UNIX account to run the program
-;redirect_stderr=false         ; redirect_stderr=true is not allowed for eventlisteners
-;stdout_logfile=/a/path        ; stdout log path, NONE for none; default AUTO
-;stdout_logfile_maxbytes=1MB   ; max # logfile bytes b4 rotation (default 50MB)
-;stdout_logfile_backups=10     ; # of stdout logfile backups (default 10)
-;stdout_events_enabled=false   ; emit events on stdout writes (default false)
-;stderr_logfile=/a/path        ; stderr log path, NONE for none; default AUTO
-;stderr_logfile_maxbytes=1MB   ; max # logfile bytes b4 rotation (default 50MB)
-;stderr_logfile_backups=10     ; # of stderr logfile backups (default 10)
-;stderr_events_enabled=false   ; emit events on stderr writes (default false)
-;environment=A="1",B="2"       ; process environment additions
-;serverurl=AUTO                ; override serverurl computation (childutils)
-
-; The below sample group section shows all possible group values,
-; create one or more 'real' group: sections to create "heterogeneous"
-; process groups.
-
-;[group:thegroupname]
-;programs=progname1,progname2  ; each refers to 'x' in [program:x] definitions
-;priority=999                  ; the relative start priority (default 999)
-
-; The [include] section can just contain the "files" setting.  This
-; setting can list multiple files (separated by whitespace or
-; newlines).  It can also contain wildcards.  The filenames are
-; interpreted as relative to this file.  Included files *cannot*
-; include files themselves.
-
-;[include]
-;files = relative/directory/*.ini
