--- a/conf/blast_nginx.conf
+++ b/conf/blast_nginx.conf
@@ -18,6 +18,26 @@ server {
 		include /var/www/blast/conf/uwsgi_params;
 		uwsgi_pass 127.0.0.1:8001;
 		root $home;
+        if ($request_method = 'OPTIONS') {
+        add_header 'Access-Control-Allow-Origin' 'https://www.blast/live';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        #
+        # Custom headers and headers various browsers *should* be OK with but aren't
+        #
+        add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+        #
+        # Tell client that this pre-flight info is valid for 20 days
+        #
+        add_header 'Access-Control-Max-Age' 1728000;
+        add_header 'Content-Type' 'text/plain charset=UTF-8';
+        add_header 'Content-Length' 0;
+        return 204;
+     }
+     if ($request_method = 'GET') {
+        add_header 'Access-Control-Allow-Origin' 'https://www.blast.live';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+     }
 	}
 
 	location /media {
